home buttons, text changes

--- a/layouts/shortcodes/amt-calculator-embed.html
+++ b/layouts/shortcodes/amt-calculator-embed.html
@@ -158,6 +158,7 @@ Fair Market Value <input type="text" value="0" class="calculate-form" id="fmv"><
     }
     
     // AMT CREDIT?
+    // DEPENDENT CREDIT?
     
     //if (!isNaN(agi)) {
         document.getElementById("total_income").innerHTML="Total Income is " + total_income;
