--- a/themes/minimal/layouts/index.html
+++ b/themes/minimal/layouts/index.html
@@ -11,6 +11,6 @@
 
 <div id="home-nav-button-wrapper">
     <button class="home-nav-button" value="home-nav-button-amt-calculator"> <a href="/amt-calculator/">Calculate my AMT</a></button>
-    <button class="home-nav-button" value="home-nav-button-learn-more"> <a href="/what-is-the-amt/">Learn more about AMT</a></button>
+    <button class="home-nav-button" value="home-nav-button-learn-more"> <a href="/posts/">Learn more about AMT</a></button>
 </div>
 {{ partial "footer" . }}
