--- a/themes/minimal/layouts/partials/body-open.html
+++ b/themes/minimal/layouts/partials/body-open.html
@@ -3,3 +3,4 @@
   Override this in your site to insert code just after the opening <body> tag.
   For example, to install an analytics tracking package.
 -->
+<!--<div> <i>Please note details in this article are relevant for the 2020 tax year (filing in 2021) </i></div>-->
