--- a/layouts/shortcodes/iso-exercise-planner.html
+++ b/layouts/shortcodes/iso-exercise-planner.html
@@ -1,4 +1,4 @@
-
+<form>
 <h3> Step 1: Figure out your Regular Income Tax </h3>
 <label for="filing_status">Choose your Filing Status</label>
 <select name="filing_status" id="filing_status">
@@ -6,39 +6,51 @@
   <option value="married_separately">Married, Filing Separately</option>
   <option value="married">Married, Filing Together</option>
 </select> <br><br>
-Salary <input type="text" value="0" class="calculate-form" id="salary"><br>
-Capital Gains <input type="text" value="0" class="calculate-form" id="capital-gains"><br>
+Salary <input type="text" value="0" class="calculate-form" onchange=check_min(this) id="salary"><p class="amt-calculator-validation-p" id="salary-p"></p><br>
+Capital Gains <input type="text" value="0" class="calculate-form" id="capital-gains">
 <h4 id="total_income"> </h4>
-Traditional 401k <input type="text" value="0" class="calculate-form" id="trad-401k"><br>
-HSA <input type="text" value="0" class="calculate-form" id="hsa"><br>
+Traditional 401k <input type="text" value="0" class="calculate-form" onchange=check_min(this) id="trad-401k"><p class="amt-calculator-validation-p" id="trad-401k-p"></p><br>
+HSA <input type="text" value="0" class="calculate-form" onchange=check_min(this) id="hsa"><p class="amt-calculator-validation-p" id="hsa-p"></p><br>
 <h4 id="magi"> </h4>
-Traditional IRA <input type="text" value="0" class="calculate-form" id="trad-ira"><br>
-Student Loan Interest <input type="text" value="0" class="calculate-form" id="sli"><br>
+Traditional IRA <input type="text" value="0" class="calculate-form" onchange=check_min(this) id="trad-ira"><p class="amt-calculator-validation-p" id="trad-ira-p"></p><br>
+Student Loan Interest <input type="text" value="0" class="calculate-form" onchange=check_min(this) id="sli"><p class="amt-calculator-validation-p" id="sli-p"></p><br>
 <h4 id="agi"> </h4>
 <!--Standard Deduction <input type="text" value="0" class="calculate-form" id="standard-deduction"><br>-->
-Medical Expenses <input type="text" value="0" class="calculate-form" id="medical-expenses"><br>
-SALT <input type="text" value="0" class="calculate-form" id="salt"><br>
-Mortgage Interest <input type="text" value="0" class="calculate-form" id="mortgage-interest"><br>
+Medical Expenses <input type="text" value="0" class="calculate-form" onchange=check_min(this) id="medical-expenses"><p class="amt-calculator-validation-p" id="medical-expenses-p"></p><br>
+SALT <input type="text" value="0" class="calculate-form" onchange=check_min(this) id="salt"><p class="amt-calculator-validation-p" id="salt-p"></p><br>
+Mortgage Interest <input type="text" value="0" class="calculate-form" onchange=check_min(this) id="mortgage-interest"><p class="amt-calculator-validation-p" id="mortgagage-interest-p"></p><br>
 <h4 id="final_deduction"> </h4>
 <h4 id="taxable_income"> </h4>
 <h4 id="regular_income_tax"></h4>
 <h3> Step 2: Input ISO Details </h3>
 <!--Shares Able to be Exercised <input type="text" value="0" class="calculate-form" id="shares-able-exercise"><br>-->
-Strike Price <input type="text" value="0" class="calculate-form" id="strike-price"><br>
-Fair Market Value <input type="text" value="0" class="calculate-form" id="fmv"><br>
+Strike Price <input type="text" value="0" class="calculate-form" onchange=check_min(this) id="strike-price"><p class="amt-calculator-validation-p" id="strike-price-p"></p><br>
+Fair Market Value <input type="text" value="0" class="calculate-form" onchange=check_min(this) id="fmv"><p class="amt-calculator-validation-p" id="fmv-p"></p><br>
 <!--<h4 id="iso_spread_subtotal"> </h4>
 <h4 id="amti"> </h4>
 <h4 id="amt_deduction"> </h4>
 <h4 id="amti_final"> </h4>
 <h4 id="amt_tax_owed"> </h4>-->
+<input type="button" onclick="calculate_taxes()" value="Calculate">
+</form>
 <h3> Results: </h3>
-<h4 id="max_shares_exercisable"> </h4>
-
-<h2 id="placeholder"></h2>
-<button onclick="calculate_taxes()"> Calculate </button>
+<h4 id="results"> </h4>
 
 <script>
+    function check_min(input) {
+      var input_id = document.getElementById(input.id).id;
+      var p_id = input_id.concat('-p');
+      if (input.value < 0) {
+        input.value = "";
+        document.getElementById(p_id).innerHTML = "This number must not be negative";
+      } else {
+        document.getElementById(p_id).innerHTML = "";
+      }
+    }
+
     function calculate_taxes() {
+
+    // Get 'value' of filing status selected to use to set tax limitations by filing status
     var filing_status_obj = document.getElementById("filing_status");
     var filing_status = filing_status_obj.options[filing_status_obj.selectedIndex].value;
     
@@ -47,12 +59,14 @@ Fair Market Value <input type="text" value="0" class="calculate-form" id="fmv"><
       var amt_phase = 518400;
       var amt_tax_brackets = 197900;
       var standard_deduction=12400;
-      var salt_deduction_max = 10000;
       var sli_phase = 70000;
       var sli_max = 85000;
       var sli_divider = 15000;
       //LOOK INTO WHETHER SINGLE PEOPLE CAN HAVE A FAMILY HSA;     
+      var trad_401k_limit = 19500;
       var hsa_limit = 3550;
+      var trad_ira_limit = 6000;
+      var salt_deduction_limit = 10000;
       var reg_income_tax_bracket = [0,9875,40125,85525,163300,207350,518400];
 
     } else if (filing_status == 'married_separately') {
@@ -60,11 +74,13 @@ Fair Market Value <input type="text" value="0" class="calculate-form" id="fmv"><
       var amt_phase = 518400;
       var amt_tax_brackets = 98950;
       var standard_deduction=12400;
-      var salt_deduction_max = 5000;
       var sli_phase = 0;
       var sli_max = 0;
       var sli_divider = 0;
+      var trad_401k_limit = 19500;
       var hsa_limit = 7100;
+      var trad_ira_limit = 6000;
+      var salt_deduction_limit = 5000;
       var reg_income_tax_bracket = [0,9875,40125,85525,163300,207350,311025];
 
     } else if (filing_status == 'married') {
@@ -72,41 +88,58 @@ Fair Market Value <input type="text" value="0" class="calculate-form" id="fmv"><
       var amt_phase = 1036800;
       var amt_tax_brackets = 197900;
       var standard_deduction=24800;
-      var salt_deduction_max = 10000;
       var sli_phase = 140000;
       var sli_max = 170000;
       var sli_divider = 30000;
+      var trad_401k_limit = 39000;
       var hsa_limit = 7100;
+      var trad_ira_limit = 12000;
+      var salt_deduction_limit = 10000;
       var reg_income_tax_bracket = [0,19750,80250,171050,326600,414700,622050];
 
     }
-
-    var salary=document.getElementById("salary").value;
-    var capital_gains=document.getElementById("capital-gains").value;
-    var trad_401k=document.getElementById("trad-401k").value;
-    var hsa=document.getElementById("hsa").value;
-    var trad_ira=document.getElementById("trad-ira").value;
-    var sli=document.getElementById("sli").value;
-    var medical_expenses=document.getElementById("medical-expenses").value;
-    var salt=document.getElementById("salt").value;
-    var mortgage_interest=document.getElementById("mortgage-interest").value;
-    //var shares_exercised=document.getElementById("shares-exercised").value;
-    //var shares_able_exercise=document.getElementById("shares-able-exercise").value;
-    var strike_price=document.getElementById("strike-price").value;
-    var fmv=document.getElementById("fmv").value;
-    var salary=document.getElementById("salary").value;
-    
-    if (salt > salt_deduction_max) {
-      salt = salt_deduction_max;
+    function empty_to_zero(num) {
+      if (num.length == 0) num = 0;
+      return num;
     }
 
+    // Get all form inputs. For all null / empty inputs, assign value of 0
+    var salary=empty_to_zero(document.getElementById("salary").value);
+    var capital_gains=empty_to_zero(document.getElementById("capital-gains").value);
+    var trad_401k=empty_to_zero(document.getElementById("trad-401k").value);
+    var hsa=empty_to_zero(document.getElementById("hsa").value);
+    var trad_ira=empty_to_zero(document.getElementById("trad-ira").value);
+    var sli=empty_to_zero(document.getElementById("sli").value);
+    var medical_expenses=empty_to_zero(document.getElementById("medical-expenses").value);
+    var salt=empty_to_zero(document.getElementById("salt").value);
+    var mortgage_interest=empty_to_zero(document.getElementById("mortgage-interest").value);
+    //var shares_exercised=empty_to_zero(document.getElementById("shares-exercised").value);
+    //var shares_able_exercise=empty_to_zero(document.getElementById("shares-able-exercise").value);
+    var strike_price=empty_to_zero(document.getElementById("strike-price").value);
+    var fmv=empty_to_zero(document.getElementById("fmv").value);
+    
+    // Calculate Total Income
     var total_income = parseFloat(salary) + parseFloat(capital_gains);
     
-    // HSA Limitation
+    // Make sure number is under 401k limit
+    if (trad_401k > trad_401k_limit) {
+      trad_401k = trad_401k_limit;
+      document.getElementById("salt").value = trad_401k_limit;
+      document.getElementById('trad-401k-p').innerHTML = "The 401k limit for your filing status is: " + trad_401k_limit;
+    }
+    // Make sure number is under HSA limit
     if (hsa > hsa_limit) {
       hsa = hsa_limit;
+      document.getElementById("salt").value = hsa_limit;
+      document.getElementById('hsa-p').innerHTML = "The HSA limit for your filing status is: " + hsa_limit;
     }
 
+    // Make sure number is under Trad IRA limit
+    if (trad_ira > trad_ira_limit) {
+      trad_ira = trad_ira_limit;
+      document.getElementById("salt").value = trad_ira_limit;
+      document.getElementById('trad-ira-p').innerHTML = "The IRA limit for your filing status is: " + trad_ira_limit;
+    }
     // MAGI - AGI but includes Trad IRA, SLI
     var magi = total_income - parseFloat(trad_401k) - parseFloat(hsa);
 
@@ -137,6 +170,13 @@ Fair Market Value <input type="text" value="0" class="calculate-form" id="fmv"><
       medical_expenses = 0;
     }
     
+    // Make sure SALT is under SALT limit
+    if (salt > salt_deduction_limit) {
+      salt = salt_deduction_limit;
+      document.getElementById("salt").value = salt_deduction_limit;
+      document.getElementById('salt-p').innerHTML = "The SALT limit for your filing status is: " + salt_deduction_limit;
+    }
+
     // Standard vs Itemized Deduction
     var itemized_deduction = parseFloat(medical_expenses) + parseFloat(salt) + parseFloat(mortgage_interest) + parseFloat(sli);
     if (itemized_deduction > standard_deduction) {
@@ -175,77 +215,20 @@ Fair Market Value <input type="text" value="0" class="calculate-form" id="fmv"><
     
     // Calculate ISO Spread Per Share
     var iso_spread_pershare = (parseFloat(fmv) - parseFloat(strike_price));
-    //var iso_spread_max_subtotal = parseFloat(shares_able_exercise) * iso_spread_pershare;
 
-    if (amti_baseline - amt_deduction > amt_tax_brackets) {
-        var max_shares_exercisable = (regular_income_tax + 0.02 * amt_tax_brackets - 0.28 * amti_baseline + 0.28 * parseFloat(amt_deduction)) / (0.28 * iso_spread_pershare);
-        max_shares_exercisable = Math.floor(max_shares_exercisable);
-    }
-    else {
-        var max_shares_exercisable = (regular_income_tax / 0.26 - amti_baseline + parseFloat(amt_deduction)) / iso_spread_pershare;
-        max_shares_exercisable = Math.floor(max_shares_exercisable);
-    }
-    
-
-    /* AMT Deduction Calculation, including Phase Out
-    var amti = amti_baseline + iso_spread_pershare;
-
-    if (amti > amt_phase) {
-      amt_deduction = amt_deduction - (0.25 * (amti - amt_phase))
-    }
-    if (amt_deduction < 0) {
-      amt_deduction = 0
-    }
-    var amti_final = amti - parseFloat(amt_deduction); 
-    
-    // Caculate AMT Tax, including Brackets
-    if (amti_final > amt_tax_brackets) {
-      var amt_tax_owed = ((amti_final - amt_tax_brackets) * 0.28) + (amt_tax_brackets * 0.26);
+    // Calculate Tax Owed, and display a result message
+    if (iso_spread_pershare == 0) {
+        var results = "Because your FMV and Strike Price are the same, you don't need to worry about AMT!";
     } else {
-      var amt_tax_owed = amti_final * 0.26;
+        if (amti_baseline - amt_deduction > amt_tax_brackets) {
+            var max_shares_exercisable = (regular_income_tax + 0.02 * amt_tax_brackets - 0.28 * amti_baseline + 0.28 * parseFloat(amt_deduction)) / (0.28 * iso_spread_pershare); }
+        else {
+            var max_shares_exercisable = (regular_income_tax / 0.26 - amti_baseline + parseFloat(amt_deduction)) / iso_spread_pershare;
+        }
+        max_shares_exercisable = Math.floor(max_shares_exercisable);
+        var results = "With the tax information you have input, you would be able to exercise " + max_shares_exercisable + " options this year at a strike price of " + strike_price + " dollars and at a FMV of " + fmv + " and not trigger AMT.";
+   
     }
-    
-    //
-    if (regular_income_tax > amt_tax_owed) {
-        var test = "You're good to go!";
-    }
-    */
-
-
-
-
-    /*
-    // if (Baseline + ISO Spread * Shares - amt_deduction) > amt_tax_brackets
-    //      var amt_tax_owed = ((placeholder - amt_tax_brackets) * 0.28) + (amt_tax_brackets * 0.26);
-    // else var amt_tax_owed = (placeholder * 0.26);
-    // var amt_tax_owed < regular_income_tax
-    if ()
-    var max_shares_exercisable = (regular_income_tax / 0.26 - amti_baseline + parseFloat(amt_deduction)) / iso_spread_pershare;
-    var max_shares_exercisable = (regular_income_tax + 0.02 * amt_tax_brackets + 0.28 * parseFloat(amt_deduction) - 0.28 * amti_baseline) / (0.28 * iso_spread_pershare)
-    //regular_income_tax = ((Baseline + ISO Spread * Shares - amt_deduction) - amt_tax_brackets) * 0.28 + amt_tax_brackets * 0.26
-    //= 0.28baseline +0.28*iso_Spread*shares - 0.28amt_deduction - 0.02amt_tax_bracket
-    //(regular_income_tax + 0.02amt_tax_bracket + 0.28amt_deduction - 0.28amtibaseline) / (0.28 * iso_spread)
-    // if crosses 26/28% threshold
-    // amt deduction phase out
-    // sliding scale
-    // not just the number of shares but basically the max value iso_spread_Subtotal
-    amti = amti_baseline + iso_spread_pershare * shares_exercised
-    amt_deduction = amt_deduction - 
-    discount = (0.25 * (amti_baseline + iso_spread_pershare * shares_exercised - amt_phase))
-    shares_exercised = (amt_phase - amti_baseline) / iso_spread_pershare
-
-    if (AMTI_final > 197800) 
-    { (AMTI_final - 197800) * .28 + 197800 * 0.26 }
-    else {AMTI_final * 0.26}
-
-    
-    AMTI_final = AMTI - amt_deduction
-    AMTI = amti_baseline + iso_spread_pershare * max_shares_exercisable
-    amt_deduction = AMTI - 500,000
-
-    */
-
-    
     
     // AMT CREDIT?
     // DEPENDENT CREDIT?
@@ -262,7 +245,7 @@ Fair Market Value <input type="text" value="0" class="calculate-form" id="fmv"><
         //document.getElementById("amt_deduction").innerHTML="Your AMT deduction is " + amt_deduction;
         //document.getElementById("amti_final").innerHTML="Final AMT Taxable Income is " + amti_final;
         //document.getElementById("amt_tax_owed").innerHTML="AMT tax owed is " + amt_tax_owed;
-        document.getElementById("max_shares_exercisable").innerHTML= "With the tax information you have input, you would be able to exercise " + max_shares_exercisable + " options this year at a strike price of " + strike_price + " dollars and at a FMV of " + fmv + " and not trigger AMT.";
+        document.getElementById("results").innerHTML= results;
         //document.getElementById("placeholder").innerHTML= max_shares_exercisable;
 
     //}
