--- a/themes/minimal/layouts/index.html
+++ b/themes/minimal/layouts/index.html
@@ -10,7 +10,8 @@
 </main>
 
 <div id="home-nav-button-wrapper">
-    <button class="home-nav-button" value="home-nav-button-amt-calculator"> <a href="/amt-calculator/">Calculate my AMT</a></button>
-    <button class="home-nav-button" value="home-nav-button-learn-more"> <a href="/posts/">Learn more about AMT</a></button>
+    <button class="home-nav-button" id="home-nav-button-amt-calculator"> <a href="/amt-calculator/">Calculate my AMT</a></button>
+    <button class="home-nav-button" id="home-nav-button-iso-exercise-planner" > <a href="/iso-exercise-planner/">How much ISO can I exercise</a></button>
+    <button class="home-nav-button" id="home-nav-button-learn-more"> <a href="/posts/">Learn about the AMT</a></button>
 </div>
 {{ partial "footer" . }}
