coloring, remove homepage buttons

--- a/themes/minimal/layouts/index.html
+++ b/themes/minimal/layouts/index.html
@@ -4,14 +4,14 @@
     <div class="intro">
         {{ with .Site.Params.profilePic }} <img class="profile" src="{{ . }}"> {{ end }}
         <h1>{{ .Site.Title }}</h1>
-        <h2>{{ markdownify .Site.Params.Description }}</h2>
+        <h2 id="homepage-description">{{ markdownify .Site.Params.Description }}</h2>
         {{ with .Content }} <div class="homepage-content text-justify">{{ . }}</div> {{ end }}
     </div>
 </main>
 
-<div id="home-nav-button-wrapper">
+<!--<div id="home-nav-button-wrapper">
     <button class="home-nav-button" id="home-nav-button-amt-calculator"> <a href="/amt-calculator/">Calculate my AMT</a></button>
     <button class="home-nav-button" id="home-nav-button-iso-exercise-planner" > <a href="/iso-exercise-planner/">Plan how many ISO stock options to exercise</a></button>
     <button class="home-nav-button" id="home-nav-button-learn-more"> <a href="/posts/">Learn about the AMT</a></button>
-</div>
+</div>-->
 {{ partial "footer" . }}
