--- a/themes/minimal/layouts/partials/css.html
+++ b/themes/minimal/layouts/partials/css.html
@@ -9,6 +9,10 @@
         --border-width: {{ if .Site.Params.showBorder | default false }} 5px {{ else }} 0 {{ end }};
     }
 
+    #homepage-description {
+        color: var(--accent);
+    }
+
     /* Chrome, Safari, Edge, Opera */
     input::-webkit-outer-spin-button,
     input::-webkit-inner-spin-button {
