--- a/themes/minimal/layouts/index.html
+++ b/themes/minimal/layouts/index.html
@@ -7,6 +7,11 @@
         <h2 id="homepage-description">{{ markdownify .Site.Params.Description }}</h2>
         {{ with .Content }} <div class="homepage-content text-justify">{{ . }}</div> {{ end }}
     </div>
+    <div id="home-nav-button-wrapper">
+        <button class="home-nav-button" id="home-nav-button-amt-calculator"> <a href="/amt-calculator/">Calculate my AMT</a></button>
+        <button class="home-nav-button" id="home-nav-button-iso-exercise-planner" > <a href="/iso-exercise-planner/">Plan how many ISO</a></button>
+        <button class="home-nav-button" id="home-nav-button-learn-more"> <a href="/posts/">Learn about the AMT</a></button>
+    </div>
 </main>
 
 <!--<div id="home-nav-button-wrapper">
