--- a/themes/minimal/static/css/main.css
+++ b/themes/minimal/static/css/main.css
@@ -42,6 +42,18 @@ img {
     margin: 10%;
 }
 
+.home-nav-button {
+    max-width: fit-content;
+    display: inline-block;
+    font-size: x-large;
+    margin: 1%;   
+}
+
+.home-nav-button a:hover{
+    text-decoration: none;
+}
+
+
 /* Page content */
 
 .content {
@@ -113,12 +125,3 @@ footer {
     border-bottom: var(--border-width) solid var(--accent);
 }
 
-.home-nav-button {
-    max-width: fit-content;
-    display: inline-block;
-    font-size: x-large;
-}
-
-.home-nav-button a:hover{
-    text-decoration: none;
-}
