--- a/themes/minimal/layouts/partials/head-close.html
+++ b/themes/minimal/layouts/partials/head-close.html
@@ -3,3 +3,4 @@
   Override this in your site to insert code just before the closing <head> tag.
   For example, to install an analytics tracking package.
 -->
+<script data-ad-client="ca-pub-3493120493138233" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
