--- a/themes/minimal/layouts/partials/header.html
+++ b/themes/minimal/layouts/partials/header.html
@@ -2,6 +2,9 @@
 <html lang="{{ .Site.LanguageCode }}">
     <head>
         {{ partial "head-open" . }}
+
+        {{ if .Site.Params.gtm_id}}{{- partial "gtm.html" . }}{{ end }}
+
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{{ .Title }}</title>
@@ -14,15 +17,7 @@
             <link href="{{ .RelPermalink }}" rel="feed" type="{{ .MediaType.Type }}" title="{{ $.Site.Title }}" />
         {{ end }}
 
-        {{ if .Site.GoogleAnalytics }}
-            <script async src="https://www.googletagmanager.com/gtag/js?id={{ .Site.GoogleAnalytics }}"></script>
-            <script>
-              window.dataLayer = window.dataLayer || [];
-              function gtag(){dataLayer.push(arguments)};
-              gtag('js', new Date());
-              gtag('config', '{{ .Site.GoogleAnalytics }}');
-            </script>
-        {{ end }}
+
 
         {{ if .Site.Params.MathJax | default true }}
             <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
